Fix navbar, align logo and nav items with flexbox
Switched from grid to flex.
Also redid the nav-left/right as they where id's and I had mistaken them for classes in the css creating issues

--- a/style.css
+++ b/style.css
@@ -64,13 +64,25 @@ nav {
     position: sticky;
     width: 100%;
     justify-content: space-between;
+    align-items: center,
     padding: 20px 0;
     background-color: var(--main-bg);
     font-size: var(--font-15);
     
 }
 
-.nav-left, .nav-right {
+.nav-section {
+    display: flex;
+    align-items: center;
+}
+
+#nav-left {
+    display: flex;
+    gap: 20px; 
+}
+
+#nav-right {
+    display: flex;
     gap: 10px;
 }
 
@@ -83,6 +95,7 @@ nav {
     font-size: var(--font-13-5);
     border-radius: 5px;
     font-weight: 450;
+    align-items: center;
 }
 
 .nav-btn:hover{
